tests/toylang/neg/000759_mutation.toylang
program a = { a = 0 int; } .
